# Embedded-Systems-Drone

./: .gitignore  README.md
Designs/: embedded-systems-drone.kicad_sch
docs/: overview.md
docs/HTTP/: HTTP_API.md
docs/designs/: Drone.stl  embedded-systems-drone.kicad_sch
docs/diagrams/: architecture-design-embedded-systems.drawio  dataflow-embedded-systems.drawio  flowchart-drone-embedded-systems.drawio  flowchart-telemetry-embedded-systems.drawio
docs/schematics/: embedded-systems-telemetry-controller.kicad_sch
docs/test-reports/: drone-test-reports.md
firmware/drone/: CMakeLists.txt  sdkconfig
firmware/drone/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/telemetry-controller/: drone_telemetry_controller.ino
